objects/SetupPageSearchMetadataStream_K_4CC2B2C3__dll.object
<CustomObject>
    <fields>
        <fullName>AiDescription__c</fullName>
        <label>AiDescription</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiName__c</fullName>
        <label>ApiName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchicalPath__c</fullName>
        <label>HierarchicalPath</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageType__c</fullName>
        <label>PageType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageUrl__c</fullName>
        <label>PageUrl</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>